--- a/sass_modules/sass-list-maps/bower.json
+++ b/sass_modules/sass-list-maps/bower.json
@@ -1,12 +1,12 @@
 {
   "name": "sass-list-maps",
-  "version": "0.9.3",
+  "version": "0.9.8",
   "homepage": "https://github.com/lunelson/sass-list-maps",
   "authors": [
     "Lu Nelson <lunelson@gmail.com>"
   ],
   "description": "Forward-compatible map functionality for libsass and ruby-sass 3.2.x",
-  "main": "sass-list-maps.scss",
+  "main": "_sass-list-maps.scss",
   "keywords": [
     "libsass",
     "sass",
@@ -26,6 +26,7 @@
     "node_modules",
     "bower_components",
     "test*",
-    "sass-hash.jpg"
+    "sass-hash.jpg",
+    "sass-list-maps.todo"
   ]
 }
